--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,71 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color:violet;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color:black;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.HD {
-  background-color:gray;
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #9fbbe4;
+  padding: 10px;
   
-  display: flex;
-  ;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color:black ;
 }
-.BR{
-  background-color: thistle;
-  font-size: x-large;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color:black ;
 
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 10px;
+  text-decoration:none;
+  line-height: 40px;
+  border-radius: 40px;
 }
-.GB{
-  background-color: blue;
-  font-size: x-large;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color:black ;
 
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 75px;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
 }
+
+/* Change the background color on mouse-over */
+.header a:hover {
+  
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: rgb(236, 220, 233);
+  color: black;
+  
+ 
+}
+
+
+
+/* Float the link section to the right */
+.header-right {
+  
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding: auto;
+  
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
+.App-header{
+  background-color: rgb(193, 253, 218);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 35px;
+  text-align: center;
+  border: ridge;
+  border-radius: 10px;
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 40px;}
