--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,12 @@
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
   .header a {
-    float: none;
-    display: block;
-    text-align: left;
+float: none;
+display: block;
+text-align: left;
   }
   .header-right {
-    float: none;
+float: none;
   }
 }
 .App-header{
@@ -69,3 +69,33 @@
   width: 60%;
   border: 3px solid #73AD21;
   padding: 40px;}
+.brand{
+  float:none;
+  color:red;
+  font-weight: bolder;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  text-shadow: rgb(76, 224, 200);
+  font-size: 35px;
+  border: ridge;
+  border-radius: 2px;
+  margin: auto;
+  width: auto;
+  border: 10px solid #96f52b;
+  display: block;
+  text-align: center;
+}
+.list{
+  background-color: rgb(240, 204, 203);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 35px;
+  text-align: center;
+  width: 10px;
+  border-radius: 10px;
+  margin: auto;
+  height: auto;
+  padding: 60px;
+  border: 3px solid #a6a1b3;}
+.div{
+  margin-top: px;
+ }
