--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 /* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
-  background-color: #9fbbe4;
+  background-color: #131313;
+  color:wheat;
   padding: 10px;
   
 }
@@ -9,7 +10,7 @@
 /* Style the header links */
 .header a {
   float: left;
-  color: black;
+  color: rgb(245, 237, 237);
   text-align: center;
   padding: 10px;
   text-decoration:none;
@@ -19,9 +20,10 @@
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header a.logo {
-  font-size: 75px;
+  font-size: 60px;
   font-weight: bold;
-  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  text-align: center;
 }
 
 /* Change the background color on mouse-over */
@@ -55,35 +57,34 @@ display: block;
 text-align: left;
   }
   .header-right {
-float: none;
+    float: none;
   }
 }
 .App-header{
-  background-color: rgb(193, 253, 218);
+  background-color:rgb(212, 177, 78);
   font-family: 'Times New Roman', Times, serif;
-  font-size: 35px;
+  font-size: 50px;
   text-align: center;
-  border: ridge;
-  border-radius: 10px;
-  margin: auto;
-  width: 60%;
-  border: 3px solid #73AD21;
-  padding: 40px;}
+  font-weight: bold;
+  color: rgb(3, 3, 3);
+ }
 .brand{
-  float:none;
-  color:red;
-  font-weight: bolder;
-  font-family: 'Times New Roman', Times, serif;
-  font-style: italic;
-  text-shadow: rgb(76, 224, 200);
-  font-size: 35px;
-  border: ridge;
-  border-radius: 2px;
-  margin: auto;
-  width: auto;
-  border: 10px solid #96f52b;
-  display: block;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+  margin: 0 -5px;
+  content: "";
+  display: table;
+  clear: both;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+  padding: 16px;
   text-align: center;
+  background-color: #f1f1f1;
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
 }
 .list{
   background-color: rgb(240, 204, 203);
