--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-color: #131313;
   color:wheat;
   padding: 10px;
-  
+  font-size: 60px;
 }
 
 /* Style the header links */
@@ -18,25 +18,12 @@
   border-radius: 40px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-.header a.logo {
-  font-size: 60px;
-  font-weight: bold;
-  color: white;
-  text-align: center;
-}
-
 /* Change the background color on mouse-over */
 .header a:hover {
   
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background-color: rgb(236, 220, 233);
+  background-color: rgb(218, 224, 250);
   color: black;
-  
- 
 }
-
-
 
 /* Float the link section to the right */
 .header-right {
@@ -49,17 +36,6 @@
   
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 500px) {
-  .header a {
-float: none;
-display: block;
-text-align: left;
-  }
-  .header-right {
-    float: none;
-  }
-}
 .App-header{
   background-color:rgb(212, 177, 78);
   font-family: 'Times New Roman', Times, serif;
@@ -68,35 +44,52 @@ text-align: left;
   font-weight: bold;
   color: rgb(3, 3, 3);
  }
-.brand{
+ * {
   box-sizing: border-box;
+}
+
+body {
   font-family: Arial, Helvetica, sans-serif;
-  float: left;
+}
+
+/* Float four columns side by side */
+.column {
+  float: none;
   width: 25%;
   padding: 0 10px;
-  margin: 0 -5px;
+  float: left;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
   content: "";
   display: table;
   clear: both;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color: #f1f1f1;
-  width: 100%;
-  display: block;
-  margin-bottom: 20px;
+  background-color: #6e6b6e;
+  
 }
-.list{
-  background-color: rgb(240, 204, 203);
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 35px;
-  text-align: center;
-  width: 10px;
-  border-radius: 10px;
-  margin: auto;
-  height: auto;
-  padding: 60px;
-  border: 3px solid #a6a1b3;}
-.div{
-  margin-top: px;
- }
+.font{
+ 
+  color:rgb(7, 7, 6);
+  
+  font-size: 60px;
+}
