--- a/src/App.css
+++ b/src/App.css
@@ -84,12 +84,39 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color: #6e6b6e;
+  background-color: #cb71e6;
+  border-radius: 20px;
   
 }
 .font{
  
   color:rgb(7, 7, 6);
-  
   font-size: 60px;
+}
+.footer{
+  background: #35bae2;
+  min-height: 20vh;
+  border-radius: 20px;
+  align-items: center;
+
+}
+.btn{
+  appearance: button;
+  background-color: #080808;
+  color: rgb(248, 248, 248);
+  cursor: pointer;
+  height: 44px;
+  border-radius: 20px;
+  margin: 16px 0 0;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  margin-left: 10px;
+  width: 20%;
+}
+.footer-note{
+  text-align: center;
+  margin-top: -60px;
 }
