--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,70 @@ body {
   font-size: 40px;
   font-weight: bold;
 }
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #000000;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #7f8d80;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+.brand{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #cb71e6;
+  border-radius: 20px;
+  margin-top: 15px;
+}
+.bcard{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  text-align: center;
+  background-color: #cb71e6;
+  border-radius: 20px;
+  margin-top: 15px;
+}
+.bcolumn{
+  float: none;
+  width: auto;
+  padding: 0 10px;
+  float: left;
+  margin-right: 20px;
+  margin-left: 30px;
+}
+/* Remove extra left and right margins, due to padding */
+.brow {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.brow:after {
+  content: "";
+  display: table;
+  clear: both;
+  
+}
